fixed UI flickering on the navbar during page refresh due to checking for user

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -3,6 +3,8 @@
   align-items: center;
   gap: 1rem;
   font-size: 0.875rem;
+  min-width: 150px;
+  justify-content: end;
 }
 
 .navContentLeft {
